--- a/AchuHTML.html
+++ b/AchuHTML.html
@@ -2,3 +2,4 @@
   <h1>ACHUMAHI</h1>
 </center>
 <hr>
+<p>This is another great story that teaches a lesson that’s written for kids but adults can enjoy, too. The story tells of a grasshopper who lounges around all summer while his friend the ant prepares for the winter. When winter comes, the two friends end up in very different situations!</p>
